tests/ast_interpreter/err_list_repetition_negative.expected
<string>:2:18: error: list repetition count cannot be negative
    print([1, 2] * -5);
                 ^
